--- a/config/database.yml
+++ b/config/database.yml
@@ -78,8 +78,8 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-production:
-  <<: *default
-  database: The_insta_production
-  username: The_insta
-  password: <%= ENV['THE_INSTA_DATABASE_PASSWORD'] %>
+# production:
+#   <<: *default
+#   database: The_insta_production
+#   username: The_insta
+#   password: <%= ENV['THE_INSTA_DATABASE_PASSWORD'] %>
