--- a/test/fixtures/favorites.yml
+++ b/test/fixtures/favorites.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  posts: MyText
+  user_id: 1
+  post_id: 1
 
 two:
-  posts: MyText
+  user_id: 1
+  post_id: 1
