--- a/.gitignore
+++ b/.gitignore
@@ -13,17 +13,16 @@
 !/log/.keep
 !/tmp/.keep
 
-# Ignore pidfiles, but keep the directory.
-/tmp/pids/*
-!/tmp/pids/
-!/tmp/pids/.keep
-
-# Ignore uploaded files in development.
+# Ignore uploaded files in development
 /storage/*
 !/storage/.keep
 
-/public/assets
+/node_modules
+/yarn-error.log
+
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+.env
